--- a/youthtransition/pages/ya-reviewandsign.html
+++ b/youthtransition/pages/ya-reviewandsign.html
@@ -419,8 +419,8 @@
                                         <p class="card-text col-12 col-md-7 pt-2">
                                             Stipends description</p>
                                         <div class=" col-12 col-md-2">
-                                            <a class="btn btn-outline-success d-block" href="./ya-stipends.html">
-                                                <i class="fa fa-check  float-left"></i>
+                                            <a class="btn btn-outline-danger d-block" href="./ya-stipends.html">
+                                                <i class="fa fa-hourglass-start  float-left"></i>
                                                 Start</a>
                                         </div>
                                     </div>
@@ -448,8 +448,8 @@
                                         <p class="card-text col-12 col-md-7 pt-2">
                                             Personal description</p>
                                         <div class=" col-12 col-md-2">
-                                            <a class="btn btn-outline-success d-block" href="./ya-personal.html">
-                                                <i class="fa fa-check  float-left"></i>
+                                            <a class="btn btn-outline-danger d-block" href="./ya-personal.html">
+                                                <i class="fa fa-hourglass-start  float-left"></i>
                                                 Start</a>
                                         </div>
                                     </div>
@@ -462,8 +462,8 @@
                                         <p class="card-text col-12 col-md-7 pt-2">
                                             Goals & Actions desription</p>
                                         <div class=" col-12 col-md-2">
-                                            <a class="btn btn-outline-success d-block" href="./ya-goalsandactions.html">
-                                                <i class="fa fa-check  float-left"></i>
+                                            <a class="btn btn-outline-danger d-block" href="./ya-goalsandactions.html">
+                                                <i class="fa fa-hourglass-start  float-left"></i>
                                                 Start</a>
                                         </div>
                                     </div>
@@ -476,8 +476,8 @@
                                         <p class="card-text col-12 col-md-7 pt-2">
                                             Received Documents description</p>
                                         <div class=" col-12 col-md-2">
-                                            <a class="btn btn-outline-success d-block" href="./ya-receiveddocuments.html">
-                                                <i class="fa fa-check  float-left"></i>
+                                            <a class="btn btn-outline-danger d-block" href="./ya-receiveddocuments.html">
+                                                <i class="fa fa-hourglass-start  float-left"></i>
                                                 Start</a>
                                         </div>
                                     </div>
